--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ safe:        false
 auto:        false
 server:      false
 server_port: 4000
-baseurl:    /hello_gitpage
+baseurl:    /pages
 url: http://localhost:4000
 
 source:      .
