--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ safe:        false
 auto:        false
 server:      false
 server_port: 4000
-baseurl:    /
+baseurl:    
 url: http://goodbai.com
 
 blogname: GoodBai
