fixed post.title to post.subject,blog name to gaodanbai ,rss added suthor and url info

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ safe:        false
 port: 4000
 baseurl:    
 url: http://goodbai.com
-title: Goodbai Blog
+title: 高蛋白网 
 blogname: Goodbai
 weibo: weibo.com/baigood 
 
