--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ feed:      /atom.xml
 future:      true
 lsi:         false
 pygments:    false
-markdown:    maruku
+markdown:    kramdown 
 
 maruku:
   use_tex:    false
