1 refine code block line-height; 2 added home page description and about page title

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ feed:      /atom.xml
 future:      true
 lsi:         false
 pygments:    false
-markdown:    maruku
+markdown:    maruku 
+textile_ext:   textile
 
 maruku:
   use_tex:    false
@@ -44,3 +45,4 @@ kramdown:
     coderay_tab_width: 4
     coderay_bold_every: 10
     coderay_css: style
+
